# snake-guard

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  snake-guard.yml
examples/pip_project/: README.md  reinstall.sh  requirements.txt
examples/poetry_project/: README.md  pyproject.toml
examples/uv_project/: README.md  pyproject.toml
snake_guard/: __init__.py  __main__.py  cache.py  cli.py  installer.py  models.py  remediation.py  reporting.py  sandbox.py  service.py
snake_guard/engines/: __init__.py  base.py  guarddog.py  pip_audit.py  provenance.py  registry.py
snake_guard/parsers/: __init__.py  base.py  common.py  functions.py  inventory.py  poetry_lock.py  pyproject.py  registry.py  requirements.py  uv_lock.py
