[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-guard"
version = "0.1.0"
description = "CLI dependency risk scanner for Python projects."
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Artemooon" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "guarddog>=2.0",
  "packaging>=24",
  "pip-audit>=2.7",
  "tomli>=2.0; python_version < '3.10'",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
]

[project.scripts]
snake-guard = "snake_guard.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["snake_guard*"]

[project.urls]
homepage = "https://github.com/Artemooon/snake-guard/"
issues = "https://github.com/Artemooon/snake-guard/issues"
