[project]
name = "snake-guard-uv-example"
version = "0.1.0"
description = "Small uv-style project for snake-guard examples."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1.0",
  "rich>=13.7,<14.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

